<resources>
    <string name="app_name">Incognito Browser</string>
    <string name="Allowed">Allowed</string>
    <string name="Blocked">Blocked</string>
    <string name="font_size">Font Size</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="PermissionRequired">Permission Required</string>
    <string name="Permissionisrequiredtodownload">Permission is required to download</string>
    <string name="ThesiteneedspermissiontoStart">The site needs permission to Start</string>
    <string name="Download">Download</string>
    <string name="open">Open</string>
    <string name="downloadsuccess">Download Success</string>
    <string name="HomePage">Home Page</string>
    <string name="the_list_is_empty">The List is Empty</string>
    <string name="Share">Share</string>
    <string name="AllDelete">Delete All</string>
    <string name="Do_All_Data">Do you want to delete all data</string>
    <string name="Do_you_want_to_delete_the_file">Note.. the file will  be deleted from the Device Storage</string>
    <string name="AddBookmark">Add Bookmark</string>
    <string name="Do_want_to">Do you want to Clear Cookies and Cache</string>
    <string name="done">Done</string>
    <string name="Camera">Camera Permission</string>
    <string name="Audio">Audio Record Permission.</string>
    <string name="clear_cookies_and_cache">Clear Cookies and Cache</string>
    <string name="download">Download</string>
    <string name="accessibility">Accessibility</string>
    <string name="site_setting">Site Setting</string>
    <string name="rate_on_google_play">Rate on Google Play</string>
    <string name="privacy_police">Privacy Police</string>
    <string name="geo">Gps Permission</string>
    <string name="DefaultBrowser">Default Browser</string>
    <string name="this_co">This may be a problem with the server\'s configuration or the server is not secure\n </string>
    <string name="secure_connection_failed">Connection Failed</string>
    <string name="no_internet_connectio">No internet connection \n \nCheck your network connection And reloading the page.</string>
    <string name="try_again">Try Again</string>
    <string name="go_back_recommend">Go Back (Recommend)</string>
    <string name="proceed_to_unsafe">proceed to (unSafe)</string>
    <string name="The_site">The site cannot be reached</string>
    <string name="desktop_mode">Desktop mode</string>
    <string name="cookies">Cookies</string>
    <string name="third_party_cookies">Third party Cookies</string>
    <string name="adblock">AdBlock</string>
    <string name="data_store">Data store</string>
    <string name="javascript">JavaScript</string>
    <string name="pop_ups">Pop ups</string>
    <string name="save_history">Save History</string>

    <string name="settingDefaultRealy">Set Default</string>

    <string name="init_admob">ca-app-pub-1102320340751314~8582620189</string>
<!--
    <string name="banner">ca-app-pub-1102320340751314/7873363113</string>
-->


    <string name="more_security_more_research">More security, more research</string>
    <string name="search_or_enter_address">search or enter address</string>
    <string name="ShareApp">Share App</string>
    <string name="let_recommend">Let me recommend you this application</string>
    <string name="find_page">Find Page</string>
    <string name="ask_for_download">Ask for Download</string>
    <string name="Bookmark">Bookmark</string>
    <string name="share">Share</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="history">History</string>
    <string name="add_new_tab">Add New Tab</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="SearchEngine">Search Engine</string>
    <string name="Chooseasearchengine">Choose a search engine</string>
    <string name="Feedback">Feedback</string>
    <string name="setdefault" translatable="false">Set Default</string>
    <string name="AddToHomeScreen">Add To Home Screen</string>
    <string name="your_browsing_history_n_n_cookies_and_site_data_n_n_information_entered_in_forms_n_n_tab_browser">• Don\'t Save Your browsing history \n\n• Disable third-party cookies  \n\n• Don\'t Save Information entered \n\n• Don\'t Save Tab Browser  \n\n• Protected from hidden trackers  \n\n• Don\'t Save Cookies</string>
    <string name="the_browser_won_t_save_the_following_information">The Browser won’t save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="there_is_no_download_now">There is no download now</string>
    <string name="Close">Close</string>
    <string name="AdsPrivcay" translatable="false">Advertising  Privacy</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="Print">Print</string>
    <string name="Progress">Progress</string>
    <string name="upgrade_to_pro">upgrade to pro</string>
    <string name="download_now">Download Now</string>

</resources>